--- a/client/head.html
+++ b/client/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <title>Local Market - Your Neighborhood Grocer</title>
-  <meta name="description" content="Get the latest news, checkout hand-picked recipes, and share with other locals.">
+  <title>Credit Agent - gestion de clientes para agentes de credito</title>
+  <meta name="description" content="Informacion al instante de todos los clientes de un agente de credito">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
   <link rel="shortcut icon" type="image/png" href="/favicon.png?123" sizes="16x16 32x32 64x64">
 
